--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,6 +39,6 @@ jobs:
     - name: Upload To Github Release
       uses: xresloader/upload-to-github-release@v1.3.2
       with:
-          file: "*.exe"
+          file: "**/*.exe"
       env: 
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
